# EVM

./: CMakeLists.txt  createRandomArr.cpp  main.cpp
Lab2/: Bash  createRandomArr.cpp  main.cpp
Lab7/: CMakeLists.txt
Lab7/For_compile/: Matrix_BLAS.h  Mul_Matrix_prim.cpp  Mul_Matrix_prim.h  Mul_Matrix_vectoriz.cpp  main.cpp
Lab7/include/: Matrix_BLAS.h  Mul_Matrix_prim.h  Mul_Matrix_vectoriz.h
Lab7/src/: Matrix_BLAS.cpp  Mul_Matrix_prim.cpp  Mul_Matrix_vectoriz.cpp  main.cpp
Lab7/test/: test.cpp  test1.cpp  test2.cpp  test3.cpp
Lab8/: CMakeLists.txt  main.cpp  time.txt
Lab9/: CMakeLists.txt  main.cpp
